# spec/openapi.yaml
@@ -306,6 +306,36 @@ paths:
                         type: string
       security:
         - api_key: []
+  /pii-anonymize/v0.1/anonymize:
+    post:
+      summary: Anonymize PII from text max 200 words
+      description: Anonymize PII from text max 200 words
+      operationId: app.anonymize
+      x-openai-isConsequential: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    pii-text: 
+                      type: string             
+      requestBody:
+        description: the text to anonymize
+        required: true
+        content:
+          application/json:
+            schema:
+                type: object
+                properties:
+                  text:
+                      type: string
+      security:
+        - api_key: []
 components:
   securitySchemes:
     api_key:
